--- a/infra/kubefed/kustomization.yaml
+++ b/infra/kubefed/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: kubefed
 resources:
-  - sources
-  - kubefed
-  - kong
+  - helm-release.yaml
+  - namespace.yaml
