Refactor: replace app of apps with ApplicationSet, phase 1 - Crossplane

--- a/platform/argocd-foundations/argo-projects.yaml
+++ b/platform/argocd-foundations/argo-projects.yaml
@@ -56,7 +56,7 @@ spec:
     kind: '*'
   - group: 'gateway.networking.k8s.io'
     kind: '*'
-  - group: '*'
+  - group: '*' #TODO - too much to whitelist
     kind: '*'
   namespaceResourceWhitelist:
   - group: '*'
