--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -10,9 +10,9 @@ tasks:
       - sleep 240
       - ./infra-setup/03-w-deploy-gke-clusters-wait.sh
       - ./infra-setup/04-setup-gke-clusters.sh
-      #- ./infra-setup/06-k8s-provider-wli.sh
 
-    desc: "Cleanup infrastructure"
+  setup:full-cleanup:
+    desc: "Cleanup infrastructure (forcefull)"
     cmds:
       - ./infra-setup/00-cleanup.sh
 
