Applicationset updates to AI components

--- a/platform/argocd-foundations/argo-projects.yaml
+++ b/platform/argocd-foundations/argo-projects.yaml
@@ -43,6 +43,8 @@ spec:
     server: '*'
   - namespace: 'kagent-system'
     server: '*'
+  - namespace: 'mcp-gateway'
+    server: '*'
   sourceRepos:
   - 'https://github.com/olga-mir/playground.git'
   - 'cr.kgateway.dev/kgateway-dev/charts'
