--- a/platform/config/applications/mcp-gateway-config.yaml
+++ b/platform/config/applications/mcp-gateway-config.yaml
@@ -1,5 +1,5 @@
 name: mcp-gateway-config
-path: platform/mcp-gateway/config
+path: ai/kgateway/mcp-gateway
 namespace: mcp-gateway
 syncWave: "2"
-project: platform
+project: ai
