--- a/platform/crossplane/provider-configs/kubernetes.yaml
+++ b/platform/crossplane/provider-configs/kubernetes.yaml
@@ -2,6 +2,8 @@ apiVersion: kubernetes.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
   name: kubernetes-provider-apps-cluster
+  annotations:
+    todo-cmp-workaround: ${PROJECT_ID}
 spec:
   credentials:
     source: Secret
