--- a/ai/kgateway-mcp/gateway-class.yaml
+++ b/ai/kgateway-mcp/gateway-class.yaml
@@ -1,11 +1,11 @@
-kind: GatewayClass
 apiVersion: gateway.networking.k8s.io/v1
+kind: GatewayClass
 metadata:
-  name: mcp
+  name: kgateway-mcp
 spec:
   controllerName: kgateway.dev/kgateway
   parametersRef:
     group: gateway.kgateway.dev
     kind: GatewayParameters
-    name: kgateway
-    namespace: kgateway-system
+    name: kgateway-mcp
+    namespace: kgateway-mcp
