--- a/platform/config/helm-applications/kgateway-app.yaml
+++ b/platform/config/helm-applications/kgateway-app.yaml
@@ -1,7 +1,8 @@
+project: ai
+syncWave: "1"
+
 name: kgateway
 chart: kgateway
 repoURL: cr.kgateway.dev/kgateway-dev/charts
-targetRevision: v2.1.0-main
+targetRevision: v2.0.2
 namespace: kgateway-system
-syncWave: "1"
-project: ai
