--- a/platform/config/helm-applications/kgateway-app.yaml
+++ b/platform/config/helm-applications/kgateway-app.yaml
@@ -6,3 +6,8 @@ chart: kgateway
 repoURL: cr.kgateway.dev/kgateway-dev/charts
 targetRevision: v2.0.2
 namespace: kgateway-system
+values:
+  discoveryNamespaceSelectors:
+    matchLabels:
+      kubernetes.io/metadata.name: kgateway
+      kgateway-name: kgateway
