--- a/platform/argocd-foundations/argo-projects.yaml
+++ b/platform/argocd-foundations/argo-projects.yaml
@@ -49,6 +49,7 @@ spec:
   - 'https://github.com/olga-mir/playground.git'
   - 'cr.kgateway.dev/kgateway-dev/charts'
   - 'ghcr.io/kagent-dev/kagent/helm'
+  - 'us-docker.pkg.dev/developers-369321/gloo-platform-dev/charts'
   clusterResourceWhitelist:
   - group: 'apiextensions.k8s.io'
     kind: 'CustomResourceDefinition'
