--- a/platform/config/helm-applications/kgateway-mcp-app.yaml
+++ b/platform/config/helm-applications/kgateway-mcp-app.yaml
@@ -13,7 +13,7 @@ values:
     image:
       registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev
       tag: v2.0.0-mcpdemo
-  discoveryNamespaceSelectors:
-    matchLabels:
-      kubernetes.io/metadata.name: kgateway-mcp
-      kgateway-name: kgateway-mcp
+  #discoveryNamespaceSelectors:
+  #  matchLabels:
+  #    kubernetes.io/metadata.name: kgateway-mcp
+  #    kgateway-name: kgateway-mcp
