--- a/platform/crossplane/compositions/vs-landing-zone.yaml
+++ b/platform/crossplane/compositions/vs-landing-zone.yaml
@@ -204,6 +204,9 @@ spec:
             base:
               apiVersion: repo.github.upbound.io/v1alpha1
               kind: Repository
+              metadata:
+                annotations:
+                  crossplane.io/external-name: "team-alpha-service-one"
               spec:
                 forProvider:
                   visibility: "private"
@@ -250,6 +253,9 @@ spec:
             base:
               apiVersion: team.github.upbound.io/v1alpha1
               kind: Team
+              metadata:
+                annotations:
+                  crossplane.io/external-name: "team-alpha"
               spec:
                 providerConfigRef:
                   name: github-provider-org
