fix mcp kgateway controller image

--- a/platform/config/helm-applications/kgateway-mcp-app.yaml
+++ b/platform/config/helm-applications/kgateway-mcp-app.yaml
@@ -11,9 +11,11 @@ namespace: kgateway-system
 values:
   controller:
     image:
-      registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev
-      tag: v2.0.0-mcpdemo
+      registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev/kgateway
+      tag: 2.0.0-mcpdemo
   #discoveryNamespaceSelectors:
   #  matchLabels:
   #    kubernetes.io/metadata.name: kgateway-mcp
   #    kgateway-name: kgateway-mcp
+
+# us-docker.pkg.dev/developers-369321/gloo-platform-dev/kgateway:2.0.0-mcpdemo
