--- a/platform/config/helm-applications/kgateway-mcp-app.yaml
+++ b/platform/config/helm-applications/kgateway-mcp-app.yaml
@@ -11,7 +11,8 @@ namespace: kgateway-system
 values:
   controller:
     image:
-      registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev/kgateway
+      registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev
+      repository: kgateway
       tag: 2.0.0-mcpdemo
   #discoveryNamespaceSelectors:
   #  matchLabels:
