--- a/platform/config/helm-applications/kgateway-mcp-app.yaml
+++ b/platform/config/helm-applications/kgateway-mcp-app.yaml
@@ -8,12 +8,15 @@ targetRevision: v2.0.0-mcpdemo
 #  --set image.tag=v2.0.0
 # https://kgateway.dev/docs/mcp/
 namespace: kgateway-system
-values:
-  controller:
+helm:
+  values:
+    controller:
+      image:
+        registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev
+        repository: kgateway
+        tag: 2.0.0-mcpdemo
     image:
       registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev
-      repository: kgateway
-      tag: 2.0.0-mcpdemo
   #discoveryNamespaceSelectors:
   #  matchLabels:
   #    kubernetes.io/metadata.name: kgateway-mcp
