fix helm appset and mcp-gateway path

--- a/platform/argocd-foundations/appset-helm.yaml
+++ b/platform/argocd-foundations/appset-helm.yaml
@@ -33,7 +33,10 @@ spec:
         repoURL: '{{ .repoURL }}'
         targetRevision: '{{ .targetRevision }}'
         helm:
-          values: '{{ .helm.values | default ""}}'
+          values: |-
+            {{- with .helm.values }}
+            {{ toYaml . }}
+            {{- end }}
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{ .namespace }}'
