--- a/platform/config/applications/mcp-gateway-config.yaml
+++ b/platform/config/applications/mcp-gateway-config.yaml
@@ -1,5 +1,6 @@
-name: mcp-gateway-config
-path: ai/kgateway/mcp-gateway
-namespace: mcp-gateway
-syncWave: "2"
 project: ai
+syncWave: "2"
+
+name: kgateway-mcp-config
+path: ai/kgateway-mcp
+namespace: mcp-gateway
