Revert "move everyhing to kgateway-system for now"
This reverts commit f8f2d740ff7085cb726de3182505baf68dcaa6ca.

--- a/ai/kgateway-mcp/gateway-parameters.yaml
+++ b/ai/kgateway-mcp/gateway-parameters.yaml
@@ -2,6 +2,6 @@ apiVersion: gateway.kgateway.dev/v1alpha1
 kind: GatewayParameters
 metadata:
   name: kgateway-mcp
-  namespace: kgateway-system
+  namespace: kgateway-mcp
 spec:
   selfManaged: {}
