--- a/ai/kgateway-mcp/gateway.yaml
+++ b/ai/kgateway-mcp/gateway.yaml
@@ -2,7 +2,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: kgateway-mcp
-  namespace: kgateway-system
+  namespace: kgateway-mcp
 spec:
   gatewayClassName: kgateway-mcp
   listeners:
