kgateway - to the bleeding edge! v2.1.0-main

--- a/platform/config/helm-applications/kgateway-app.yaml
+++ b/platform/config/helm-applications/kgateway-app.yaml
@@ -4,7 +4,7 @@ syncWave: "1"
 name: kgateway
 chart: kgateway
 repoURL: cr.kgateway.dev/kgateway-dev/charts
-targetRevision: v2.0.2
+targetRevision: v2.1.0-main
 namespace: kgateway-system
 values:
   discoveryNamespaceSelectors:
