crossplane - function auto ready

--- a/platform/crossplane/compositions/github-team-config.yaml
+++ b/platform/crossplane/compositions/github-team-config.yaml
@@ -117,3 +117,7 @@ spec:
               - type: FromCompositeFieldPath
                 fromFieldPath: spec.teamName
                 toFieldPath: spec.forProvider.teamId:w
+
+    - step: automatically-detect-ready-composed-resources
+      functionRef:
+        name: function-auto-ready
