--- a/platform/crossplane/compositions/github-team-config.yaml
+++ b/platform/crossplane/compositions/github-team-config.yaml
@@ -1,10 +1,10 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: Composition
 metadata:
-  name: teamconfigs.github.yourdomain.com
+  name: teamconfigs.platform.tornado-demo.io
 spec:
   compositeTypeRef:
-    apiVersion: github.yourdomain.com/v1alpha1
+    apiVersion: platform.tornado-demo.io/v1alpha1
     kind: TeamConfig
   mode: Pipeline
   pipeline:
