--- a/platform/crossplane/definitions/github-team-config.yaml
+++ b/platform/crossplane/definitions/github-team-config.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: teamconfigs.github.yourdomain.com
+  name: teamconfigs.platform.tornado-demo.io
 spec:
-  group: github.yourdomain.com
+  group: platform.tornado-demo.io
   names:
     kind: TeamConfig
     plural: teamconfigs
