Fix kgateway MCP and add gateway AI

--- a/platform/config/applications/ai-gateway-config.yaml
+++ b/platform/config/applications/ai-gateway-config.yaml
@@ -1,6 +1,6 @@
 project: ai
 syncWave: "2"
 
-name: kgateway-mcp-config
-path: ai/kgateway-mcp
+name: kgateway-ai-config
+path: ai/kgateway-ai
 namespace: kgateway-system
