--- a/platform/crossplane/definitions/github-repo-config.yaml
+++ b/platform/crossplane/definitions/github-repo-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: tornadorepo.platform.tornado-demo.io
+  name: tornadorepos.platform.tornado-demo.io
 spec:
   group: platform.tornado-demo.io
   names:
