--- a/platform/config/helm-applications/kgateway-ai-app.yaml
+++ b/platform/config/helm-applications/kgateway-ai-app.yaml
@@ -3,7 +3,7 @@ syncWave: "1"
 
 name: kgateway-ai
 chart: kgateway
-repoURL: us-docker.pkg.dev/developers-369321/gloo-platform-dev/charts
+repoURL: cr.kgateway.dev/kgateway-dev/charts
 targetRevision: v2.1.0-main
 namespace: kgateway-system
 helm:
