github: fix apiKind

--- a/teams/team-bravo/tornado-repo.yaml
+++ b/teams/team-bravo/tornado-repo.yaml
@@ -1,4 +1,4 @@
-apiVersion: github.platform.io/v1alpha1
+apiVersion: platform.tornado-demo.io/v1alpha1
 kind: tornadorepo
 metadata:
   name: team-bravo-service-xyz
