--- a/platform/argocd-foundations/argo-projects.yaml
+++ b/platform/argocd-foundations/argo-projects.yaml
@@ -45,6 +45,8 @@ spec:
     server: '*'
   - namespace: 'kgateway-mcp'
     server: '*'
+  - namespace: '*'
+    server: '*'
   sourceRepos:
   - 'https://github.com/olga-mir/playground.git'
   - 'cr.kgateway.dev/kgateway-dev/charts'
