--- a/teams/team-charlie/tornado-repo.yaml
+++ b/teams/team-charlie/tornado-repo.yaml
@@ -1,5 +1,5 @@
 apiVersion: platform.tornado-demo.io/v1alpha1
-kind: tornadorepo
+kind: TornadoRepo
 metadata:
   name: team-charlie-service-abc
   namespace: team-charlie
