--- a/ai/kgateway-ai/gateway.yaml
+++ b/ai/kgateway-ai/gateway.yaml
@@ -2,7 +2,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: ai-gateway
-  namespace: kgateway-system
+  namespace: ai-gateway-config
   labels:
     app: ai-kgateway
 spec:
