--- a/ai/kgateway-mcp/mcp-server-resources.yaml
+++ b/ai/kgateway-mcp/mcp-server-resources.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mcp-gateway
-  namespace: kgateway-system
+  namespace: mcp
 spec:
   selector:
     matchLabels:
@@ -56,7 +56,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mcp-gateway
-  namespace: kgateway-system
+  namespace: mcp
 spec:
   selector:
     app: mcp-gateway
@@ -70,14 +70,14 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mcp-gateway-config
-  namespace: kgateway-system
+  namespace: mcp
 data:
   config.json: |
     {
       "type": "xds",
       "xds_address": "http://kgateway-mcp.kgateway-system.svc.cluster.local:9977",
       "metadata": {},
-      "alt_xds_hostname": "mcp-gateway.default.svc.cluster.local",
+      "alt_xds_hostname": "mcp-gateway.mcp.svc.cluster.local",
       "listener": {
         "type": "sse",
         "host": "0.0.0.0",
